--- a/.gitmodules
+++ b/.gitmodules
@@ -5,5 +5,5 @@
 	path = CS52_StarterFiles
 	url = https://github.com/0ffkilter/CS52_StarterFiles
 [submodule "jflap-tester"]
-	path = jflap-tester
+	path = jflap_tester
 	url = https://github.com/0ffkilter/jflap-tester/
