--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "CS52_StarterFiles"]
 	path = CS52_StarterFiles
 	url = https://github.com/0ffkilter/CS52_StarterFiles
-[submodule "jflap-tester"]
+[submodule "jflap_tester"]
 	path = jflap_tester
 	url = https://github.com/0ffkilter/jflap-tester/
